	PR c++/63885 	* constexpr.c (cxx_eval_constant_expression) [PARM_DECL]: Don't 	complain yet about a reference. 	[TARGET_EXPR]: Handle TARGET_EXPR with addr == true. 	[ADDR_EXPR]: Make sure we don't take the address of a CONSTRUCTOR. 	(cxx_bind_parameters_in_call): In the new scheme addr is always false. 	* typeck.c (build_address): Don't take the address of a CONSTRUCTOR.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@217815 138bc75d-0d04-0410-961f-82ee72b054a4